--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "jwt-decode": "^3.1.2",
         "mongoose-autopopulate": "^0.16.1",
         "moongose": "^1.0.0",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "swagger-jsdoc": "^6.2.5",
+        "swagger-ui-express": "^4.5.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.19"
