--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "nodemon src/index.js",
+        "dev": "nodemon index.js",
         "start": "node index.js",
         "format:check": "prettier --check .",
         "format:write": "prettier --write .",
